--- a/package.json
+++ b/package.json
@@ -7,16 +7,23 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@wdio/allure-reporter": "^8.0.11",
+        "@wdio/browserstack-service": "^8.0.11",
         "@wdio/cli": "^8.0.12",
         "@wdio/dot-reporter": "^8.0.11",
         "@wdio/junit-reporter": "^8.0.11",
         "@wdio/local-runner": "^8.0.12",
         "@wdio/mocha-framework": "^8.0.11",
+        "@wdio/selenium-standalone-service": "^8.0.11",
         "@wdio/spec-reporter": "^8.0.11",
         "chromedriver": "^108.0.0",
         "wdio-chromedriver-service": "^8.0.1"
     },
     "scripts": {
-        "wdio": "wdio run wdio.conf.js"
+        "wdio": "wdio run wdio.conf.js",
+        "GenerateReport": "allure generate allure-results --clean && allure open"
+    },
+    "dependencies": {
+        "allure-commandline": "^2.20.1"
     }
 }
